--- a/cv.html
+++ b/cv.html
@@ -11,8 +11,8 @@
     <!-- En-tête avec la photo et le nom -->
     <header class="cv-header">
         <img src="photo.jpg" alt="Photo de Profil" class="profile-img">
-        <h1>Nom Prénom</h1>
-        <p>Votre poste actuel | Votre spécialité</p>
+        <h1>Cyrille</h1>
+        <p>Analyste SOC | Cybersécurité</p>
     </header>
 
     <!-- Section de contenu principale -->
@@ -21,10 +21,9 @@
         <section class="section personal-info">
             <h2>Informations Personnelles</h2>
             <ul>
-                <li>Email : exemple@mail.com</li>
-                <li>Téléphone : 0123456789</li>
-                <li>Adresse : Votre adresse ici</li>
-                <li>Site web : www.exemple.com</li>
+                <li>Email : Inconnu</li>
+                <li>Téléphone : Inconnu</li>
+                <li>Adresse : Ile de France</li>
             </ul>
         </section>
 
