--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV - Nom Prénom</title>
+    <title>CV - Cyrille</title>
     <link rel="stylesheet" href="css/cv-style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <!-- En-tête avec la photo et le nom -->
     <header class="cv-header">
         <img src="photo.jpg" alt="Photo de Profil" class="profile-img">
-        <h1>C̵̓ỳ̴̡̞̹r̸̓i̷͂͛̒l̷͌͑͝l̵̔͆͒e̴̽̓͝</h1>
+        <h1>Cyrille</h1>
         <p>Analyste SOC | Cybersécurité</p>
     </header>
 
