--- a/cv.html
+++ b/cv.html
@@ -7,17 +7,13 @@
     <link rel="stylesheet" href="css/cv-style.css">
 </head>
 <body>
-
-    <!-- En-tête avec la photo et le nom -->
+<a href="https://darconex.github.io/" class="button-link">Menu</a>
     <header class="cv-header">
         <img src="photo.jpg" alt="Photo de Profil" class="profile-img">
         <h1>Cyrille</h1>
         <p>Analyste SOC | Cybersécurité</p>
     </header>
-
-    <!-- Section de contenu principale -->
     <main>
-        <!-- Informations personnelles -->
         <section class="section personal-info">
             <h2>Informations Personnelles</h2>
             <ul>
@@ -26,8 +22,6 @@
                 <li>Adresse : Ile de France</li>
             </ul>
         </section>
-
-        <!-- Expérience professionnelle -->
         <section class="section experience">
             <h2>Expérience Professionnelle</h2>
             <div class="experience-item">
@@ -39,8 +33,6 @@
                 <p>Années | Description du poste, responsabilités, et accomplissements.</p>
             </div>
         </section>
-
-        <!-- Compétences -->
         <section class="section skills">
             <h2>Compétences</h2>
             <ul class="skills-list">
@@ -49,8 +41,6 @@
                 <li>Compétence 3</li>
             </ul>
         </section>
-
-        <!-- Formations -->
         <section class="section education">
             <h2>Formation</h2>
             <div class="education-item">
