--- a/cv.html
+++ b/cv.html
@@ -4,6 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Darconex</title>
+     <style>
+      .button-link {
+        background-color: #808080;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 14px;
+        cursor: pointer;
+        border-radius: 5px;
+        transition-duration: 0.4s;
+        margin-right: 20px;
+      }
+      .button-link:hover {
+        background-color: white;
+        color: #808080;
+        border: 2px solid #808080;
+      }
+      #header {
+        display: flex;
+        align-items: center;
+      }
+      #header > div {
+        flex-grow: 1;
+        text-align: center;
+      }
+      footer {
+        text-align: center;
+        padding: 10px;
+        background-color: #403f3f;
+        color: white;
+        font-size: 0.9em;
+        position: relative;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
     <link rel="stylesheet" href="css/cv-style.css">
 </head>
 <body>
