--- a/cv.html
+++ b/cv.html
@@ -88,5 +88,8 @@
             </div>
         </section>
     </main>
+    <footer>
+        &copy; 2024 Darconex. Tous droits réservés.
+    </footer>
 </body>
 </html>
