--- a/cv.html
+++ b/cv.html
@@ -48,7 +48,7 @@
 <body>
 <a href="https://darconex.github.io/" class="button-link">Menu</a>
     <header class="cv-header">
-        <img src="photo.jpg" alt="Photo de Profil" class="profile-img">
+        <img src="image/moi3.jpg" alt="Photo de Profil" class="profile-img">
         <h1>Cyrille</h1>
         <p>Analyste SOC | Cybersécurité</p>
     </header>
@@ -56,8 +56,8 @@
         <section class="section personal-info">
             <h2>Informations Personnelles</h2>
             <ul>
-                <li>Email : Inconnu</li>
-                <li>Téléphone : Inconnu</li>
+                <li>Email : Secret</li>
+                <li>Téléphone : Secret</li>
                 <li>Adresse : Ile de France</li>
             </ul>
         </section>
@@ -84,7 +84,10 @@
             <h2>Formation</h2>
             <div class="education-item">
                 <h3>Diplôme - Établissement</h3>
-                <p>Année | Description du programme ou des matières étudiées.</p>
+                <p>Technicien Supérieur en Maintenance Informatique et Réseau - BAC +2</p>
+                <p>De 2015 à 2017 | Aston Arcueil-Cachan.</p>
+                <p>Technicien Maintenance micro-Informatique et Réseau - BAC</p>
+                <p>De 2015 à 2016 | Aston Bagneux.</p>
             </div>
         </section>
     </main>
