--- a/cv.html
+++ b/cv.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/logo.png" title="logo">
     <title>Darconex</title>
      <style>
       .button-link {
@@ -48,7 +49,7 @@
 <body>
 <a href="https://darconex.github.io/" class="button-link">Menu</a>
     <header class="cv-header">
-        <img src="image/moi3.jpg" alt="Photo de Profil" class="profile-img">
+        <img src="img/moi3.jpg" alt="Photo de Profil" class="profile-img">
         <h1>Cyrille</h1>
         <p>Analyste SOC | Cybersécurité</p>
     </header>
