--- a/cv.html
+++ b/cv.html
@@ -63,9 +63,9 @@
             </ul>
         </section>
         <section class="section experience">
-<h2>SEA TPI</h2>
+<h2>ESN</h2>
 <p>7 ans 3 mois</p>
-<p>Analyste SOC / Cybersécurité CDI</p>
+<h3>Analyste SOC / Cybersécurité CDI</h3>
 <p>De avr. 2022 à aujourd’hui · 2 ans 6 mois</p>
 <p>Paris · HybrideParis · Hybride</p>
 <h3>● SOC Analyste N2</3>
