--- a/cv.html
+++ b/cv.html
@@ -85,16 +85,8 @@
 <p>Solution de sécurité suivante :</p>
 <p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch</p>
 
-<h3>● SOC Analyste N2</h3>
-<p>➔ Traitement des alertes de sécurité</p>
-<p>➔ Analyse, qualification et réponse aux incidents de sécurité</p>
-<p>➔ Technologies éditeurs (SIEM, EPP, EDR, Protection de la messagerie et scanner de vulnérabilités)</p>
-<p>➔ Investigation sur Open Source Intelligence (OSINT)</p>
-<p>➔ Cyber Threat Intelligence / Threat Hunting</p>
-<p>➔ Gestion de crise</p>
-<p>➔ Astreinte pour le N1</p>
-
-● Projet et Intégration ➔Création de Template, procédure et documents techniques 
+<h3>● Projet et Intégration</h3>
+<p></p>➔Création de Template, procédure et documents techniques</p>
 <p>➔ Mise en place d'un journal sur l'intranet (CyberVeille, Alerte CVE, Cyber Actu, Patch Tuesday)</p>
 
 ● Technologie Solution de sécurité suivante : 
