--- a/cv.html
+++ b/cv.html
@@ -92,8 +92,7 @@
 ● Technologie Solution de sécurité suivante : 
 <p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch</p>
 
-<p>Technicien N2 - AVIVA FranceTechnicien N2 - AVIVA France</p>
-CDI</p>
+<p>Technicien N2 - AVIVA FranceTechnicien N2 - AVIVA France CDI</p>
 <p>Du août 2021 au mars 2022 · 8 mois</p>
 <p>Bois-Colombes, Île-de-France, France · Sur siteBois-Colombes, Île-de-France, France · Sur site</p>
 <p>➔ Création de procédures</p>
@@ -104,8 +103,7 @@ CDI</p>
 <p>➔ Déplacement multi-sites</p>
 <p>➔ Gestion demandes et incidents</p>
 <p>➔ Rapport Backlog et SLA</p>
-<p>Technicien de Proximité N2, utilisateur et VIP - Groupe BPCE-IT</p>
-CDI</p>
+<p>Technicien de Proximité N2, utilisateur et VIP - Groupe BPCE-IT CDI</p>
 <p>Du juil. 2017 au août 2021 · 4 ans 2 mois</p>
 <p>Région de Paris, France · Sur site</p>
 <p>➔ Préparation des postes</p>
