--- a/cv.html
+++ b/cv.html
@@ -135,7 +135,6 @@
 <p>➔ Déploiement du parc informatique</p>
 <p>➔ Création de procédures sur des outils propre à l'entreprise</p>
 <p>➔ Gestion de l'AD</p>
-
 <h3>Technicien de ProximitéTechnicien de Proximité</h3>
 <p>SNCF · Contrat en alternance</p>
 <p>Du sept. 2016 au juin 2017 · 10 mois</p>
@@ -154,7 +153,7 @@
 <p>➔ Dépannage des iPhones</p>
 <p>➔ Utilisation de Gestion du parc informatique ( REPAR )</p>
 <h2>Technicien de Proximité</h2>
-<p>Exide Technologies and GNB Industrial Power (div. of Exide Technologies)</>
+<p>Exide Technologies and GNB Industrial Power (div. of Exide Technologies)</p>
 <p>Du févr. 2015 au avr. 2015 · 3 mois</p>
 <p>Gennevillier</p>
 <p>➔ Prise du contrôle à distance avec un outil TeamViewer</p>
