--- a/cv.html
+++ b/cv.html
@@ -68,7 +68,7 @@
 <h3>Analyste SOC / Cybersécurité CDI</h3>
 <p>De avr. 2022 à aujourd’hui · 2 ans 6 mois</p>
 <p>Paris · HybrideParis · Hybride</p>
-<h3>● SOC Analyste N2</3>
+<p>● SOC Analyste N2<p>
 <p>➔ Traitement des alertes de sécurité</p>
 <p>➔ Analyse, qualification et réponse aux incidents de sécurité</p>
 <p>➔ Technologies éditeurs (SIEM, EPP, EDR, Protection de la messagerie et scanner de vulnérabilités)</p>
@@ -76,16 +76,16 @@
 <p>➔ Cyber Threat Intelligence / Threat Hunting</p>
 <p>➔ Gestion de crise</p>
 <p>➔ Astreinte pour le N1</p>
-<h3>● Projet et Intégration</h3>
+<p>● Projet et Intégration</p>
 <p>➔Création de Template, procédure et documents techniques</p>
 <p>➔Mise en place d'un journal sur l'intranet (CyberVeille, Alerte CVE, Cyber Actu, Patch Tuesday)</p>
-<h3>● Technologie</h3>
+<p>● Technologie</p>
 <p>Solution de sécurité suivante :</p>
 <p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch</p>
 <h3>● Projet et Intégration</h3>
 <p></p>➔Création de Template, procédure et documents techniques</p>
 <p>➔ Mise en place d'un journal sur l'intranet (CyberVeille, Alerte CVE, Cyber Actu, Patch Tuesday)</p>
-● Technologie Solution de sécurité suivante : 
+<p></p>● Technologie Solution de sécurité suivante :</p>
 <p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch</p>
 <p>Technicien N2 - AVIVA FranceTechnicien N2 - AVIVA France CDI</p>
 <p>Du août 2021 au mars 2022 · 8 mois</p>
@@ -135,7 +135,7 @@
 <p>➔ Déploiement du parc informatique</p>
 <p>➔ Création de procédures sur des outils propre à l'entreprise</p>
 <p>➔ Gestion de l'AD</p>
-<h3>Technicien de ProximitéTechnicien de Proximité</h3>
+<p>Technicien de ProximitéTechnicien de Proximité</p>
 <p>SNCF · Contrat en alternance</p>
 <p>Du sept. 2016 au juin 2017 · 10 mois</p>
 <p>Villeneuve triage · Sur siteVilleneuve triage · Sur site</p>
