--- a/cv.html
+++ b/cv.html
@@ -128,7 +128,7 @@
 <p>➔ Mission aménagement des bureaux en Open Space ➔ Gestion et accompagnement à l’utilisation du nouveau matériel</p> 
 <p>➔ Préparation et configuration de 150 postes ➔ Analyse de chaque port pour mettre dans le bon vlan (IMP, Poste, Wifi)</p>
 <p>➔ Migration de W7 à W10</p>
-<h3>Technicien de Proximité pour SysmexTechnicien de Proximité pour Sysmex<h3>
+<p>Technicien de Proximité pour SysmexTechnicien de Proximité pour Sysmex<p>
 <p>Temps partiel</p>
 <p>Du févr. 2019 au juin 2019 · 5 mois</p>
 <p>VILLEPINTE · Sur site</p>
