--- a/cv.html
+++ b/cv.html
@@ -82,11 +82,11 @@
 <p>● Technologie</p>
 <p>Solution de sécurité suivante :</p>
 <p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch</p>
-<h3>● Projet et Intégration</h3>
+<p>● Projet et Intégration</p>
 <p></p>➔Création de Template, procédure et documents techniques</p>
 <p>➔ Mise en place d'un journal sur l'intranet (CyberVeille, Alerte CVE, Cyber Actu, Patch Tuesday)</p>
 <p></p>● Technologie Solution de sécurité suivante :</p>
-<p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch</p>
+<p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch<br />
 <p>Technicien N2 - AVIVA FranceTechnicien N2 - AVIVA France CDI</p>
 <p>Du août 2021 au mars 2022 · 8 mois</p>
 <p>Bois-Colombes, Île-de-France, France · Sur siteBois-Colombes, Île-de-France, France · Sur site</p>
