--- a/cv.html
+++ b/cv.html
@@ -145,15 +145,15 @@
 <p>➔ Utilisation de logiciel bureautique</p>
 <p>➔ Hotline</p>
 <p>➔ Brassage de bais réseaux</p>
-<h2>SPAD ( Service Pré-études Approvisionnement Déploiements )SPAD ( Service Pré-études Approvisionnement Déploiements )</h2>
+<h2>SPAD ( Service Pré-études Approvisionnement Déploiements )</h2>
 <p>Banque de France · Contrat en alternance</p>
 <p>Du sept. 2015 au août 2016 · 1 an</p>
 <p>Région de Paris, France · Sur siteRégion de Paris, France · Sur site</p>
 <p>➔ Déploiement des iPhones sur le terminal Air Watch</p>
 <p>➔ Dépannage des iPhones</p>
 <p>➔ Utilisation de Gestion du parc informatique ( REPAR )</p>
-<h2>Technicien de Proximité</h2>
 <p>Exide Technologies and GNB Industrial Power (div. of Exide Technologies)</p>
+<h2>Technicien de Proximité</h2>
 <p>Du févr. 2015 au avr. 2015 · 3 mois</p>
 <p>Gennevillier</p>
 <p>➔ Prise du contrôle à distance avec un outil TeamViewer</p>
