--- a/cv.html
+++ b/cv.html
@@ -152,7 +152,7 @@
 <p>➔ Déploiement des iPhones sur le terminal Air Watch</p>
 <p>➔ Dépannage des iPhones</p>
 <p>➔ Utilisation de Gestion du parc informatique ( REPAR )</p>
-<p>Exide Technologies and GNB Industrial Power (div. of Exide Technologies)</p>
+<h2>Exide Technologies and GNB Industrial Power (div. of Exide Technologies)</h2>
 <h2>Technicien de Proximité</h2>
 <p>Du févr. 2015 au avr. 2015 · 3 mois</p>
 <p>Gennevillier</p>
