--- a/cv.html
+++ b/cv.html
@@ -89,7 +89,7 @@
 <p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch<br />
 <p>Technicien N2 - AVIVA FranceTechnicien N2 - AVIVA France CDI</p>
 <p>Du août 2021 au mars 2022 · 8 mois</p>
-<p>Bois-Colombes, Île-de-France, France · Sur siteBois-Colombes, Île-de-France, France · Sur site</p>
+<p>Bois-Colombes, Île-de-France, France · Sur site</p>
 <p>➔ Création de procédures</p>
 <p>➔ Déplacement multi-sites</p>
 <p>➔ Gestion demandes et incidents</p>
@@ -125,8 +125,10 @@
 <p>➔ Accompagnement des nouveaux arrivants</p>
 <p>➔ Déploiement de la solution One-Q</p>
 <p>➔ BAR-IT Projet « OPEN » - Réaménagement du site en Open Space (Durée du projet 1 an)</p>
-<p>➔ Mission aménagement des bureaux en Open Space ➔ Gestion et accompagnement à l’utilisation du nouveau matériel</p> 
-<p>➔ Préparation et configuration de 150 postes ➔ Analyse de chaque port pour mettre dans le bon vlan (IMP, Poste, Wifi)</p>
+<p>➔ Mission aménagement des bureaux en Open Space</p>
+<p>➔ Gestion et accompagnement à l’utilisation du nouveau matériel</p> 
+<p>➔ Préparation et configuration de 150 postes</p>
+<p>➔ Analyse de chaque port pour mettre dans le bon vlan (IMP, Poste, Wifi)</p>
 <p>➔ Migration de W7 à W10</p>
 <p>Technicien de Proximité pour SysmexTechnicien de Proximité pour Sysmex<p>
 <p>Temps partiel</p>
@@ -138,7 +140,7 @@
 <p>Technicien de ProximitéTechnicien de Proximité</p>
 <p>SNCF · Contrat en alternance</p>
 <p>Du sept. 2016 au juin 2017 · 10 mois</p>
-<p>Villeneuve triage · Sur siteVilleneuve triage · Sur site</p>
+<p>Villeneuve triage · Sur site</p>
 <p>➔ Déploiement des PC Rame</p>
 <p>➔ Masterisation des postes informatiques</p>
 <p>➔ Prise en main à distance « Dameware »</p>
@@ -148,7 +150,7 @@
 <h2>SPAD ( Service Pré-études Approvisionnement Déploiements )</h2>
 <p>Banque de France · Contrat en alternance</p>
 <p>Du sept. 2015 au août 2016 · 1 an</p>
-<p>Région de Paris, France · Sur siteRégion de Paris, France · Sur site</p>
+<p>Région de Paris, France · Sur site</p>
 <p>➔ Déploiement des iPhones sur le terminal Air Watch</p>
 <p>➔ Dépannage des iPhones</p>
 <p>➔ Utilisation de Gestion du parc informatique ( REPAR )</p>
