--- a/cv.html
+++ b/cv.html
@@ -87,7 +87,7 @@
 <p>➔ Mise en place d'un journal sur l'intranet (CyberVeille, Alerte CVE, Cyber Actu, Patch Tuesday)</p>
 <p></p>● Technologie Solution de sécurité suivante :</p>
 <p>➔ Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch<br />
-<p>Technicien N2 - AVIVA FranceTechnicien N2 - AVIVA France CDI</p>
+<p>Technicien N2 - AVIVA France</p>
 <p>Du août 2021 au mars 2022 · 8 mois</p>
 <p>Bois-Colombes, Île-de-France, France · Sur site</p>
 <p>➔ Création de procédures</p>
