--- a/cv.html
+++ b/cv.html
@@ -137,8 +137,8 @@
 <p>➔ Déploiement du parc informatique</p>
 <p>➔ Création de procédures sur des outils propre à l'entreprise</p>
 <p>➔ Gestion de l'AD</p>
-<p>Technicien de ProximitéTechnicien de Proximité</p>
 <p>SNCF · Contrat en alternance</p>
+<p>Technicien de Proximité</p>
 <p>Du sept. 2016 au juin 2017 · 10 mois</p>
 <p>Villeneuve triage · Sur site</p>
 <p>➔ Déploiement des PC Rame</p>
@@ -147,15 +147,15 @@
 <p>➔ Utilisation de logiciel bureautique</p>
 <p>➔ Hotline</p>
 <p>➔ Brassage de bais réseaux</p>
+<h2>Banque de France · Contrat en alternance</h2>
 <h2>SPAD ( Service Pré-études Approvisionnement Déploiements )</h2>
-<p>Banque de France · Contrat en alternance</p>
 <p>Du sept. 2015 au août 2016 · 1 an</p>
 <p>Région de Paris, France · Sur site</p>
 <p>➔ Déploiement des iPhones sur le terminal Air Watch</p>
 <p>➔ Dépannage des iPhones</p>
 <p>➔ Utilisation de Gestion du parc informatique ( REPAR )</p>
 <h2>Exide Technologies and GNB Industrial Power (div. of Exide Technologies)</h2>
-<h2>Technicien de Proximité</h2>
+<h3>Technicien de Proximité</h3>
 <p>Du févr. 2015 au avr. 2015 · 3 mois</p>
 <p>Gennevillier</p>
 <p>➔ Prise du contrôle à distance avec un outil TeamViewer</p>
