--- a/cv.html
+++ b/cv.html
@@ -170,11 +170,10 @@
 <p>➔ Utilisation d'hyper-v : mise en place des quotas pour limiter un espace disque, Création de plusieurs partitions, Gestion des autorisations des fichiers, Déploiement d’un master</p>
         </section>
         <section class="section skills">
-            <h2>Compétences</h2>
+            <h2>Autodidacte</h2>
             <ul class="skills-list">
-                <li>Compétence 1</li>
-                <li>Compétence 2</li>
-                <li>Compétence 3</li>
+                <li>Formation :</li>
+                <li>Tryhackme, HackTheBox, Root-me </li>
             </ul>
         </section>
         <section class="section education">
