--- a/cv.html
+++ b/cv.html
@@ -172,8 +172,7 @@
         <section class="section skills">
             <h2>Autodidacte</h2>
             <ul class="skills-list">
-                <li>Formation :</li>
-                <li>Tryhackme, HackTheBox, Root-me </li>
+                <li>Formation : Tryhackme, HackTheBox, Root-me </li>
             </ul>
         </section>
         <section class="section education">
