--- a/cv.html
+++ b/cv.html
@@ -153,7 +153,8 @@
 <p>Région de Paris, France · Sur site</p>
 <p>➔ Déploiement des iPhones sur le terminal Air Watch</p>
 <p>➔ Dépannage des iPhones</p>
-<p>➔ Utilisation de Gestion du parc informatique ( REPAR )</p>
+<p>➔ Utilisation de Gestion du parc informatique ( REPAR )</ br>
+
 <h2>Exide Technologies and GNB Industrial Power (div. of Exide Technologies)</h2>
 <h3>Technicien de Proximité</h3>
 <p>Du févr. 2015 au avr. 2015 · 3 mois</p>
