--- a/cv.html
+++ b/cv.html
@@ -147,14 +147,15 @@
 <p>➔ Utilisation de logiciel bureautique</p>
 <p>➔ Hotline</p>
 <p>➔ Brassage de bais réseaux</p>
+<hr>
 <h2>Banque de France · Contrat en alternance</h2>
 <h2>SPAD ( Service Pré-études Approvisionnement Déploiements )</h2>
 <p>Du sept. 2015 au août 2016 · 1 an</p>
 <p>Région de Paris, France · Sur site</p>
 <p>➔ Déploiement des iPhones sur le terminal Air Watch</p>
 <p>➔ Dépannage des iPhones</p>
-➔ Utilisation de Gestion du parc informatique ( REPAR ) &nbsp;<br />
-
+<p>➔ Utilisation de Gestion du parc informatique ( REPAR )</p>
+<hr>
 <h2>Exide Technologies and GNB Industrial Power (div. of Exide Technologies)</h2>
 <h3>Technicien de Proximité</h3>
 <p>Du févr. 2015 au avr. 2015 · 3 mois</p>
