--- a/cv.html
+++ b/cv.html
@@ -63,7 +63,7 @@
             </ul>
         </section>
         <section class="section experience">
-<h2>ESN</h2>
+<h2>Sea Tpi</h2>
 <p>7 ans 3 mois</p>
 <h3>Analyste SOC / Cybersécurité CDI</h3>
 <p>De avr. 2022 à aujourd’hui · 2 ans 6 mois</p>
