--- a/cv1.html
+++ b/cv1.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CV Futuriste - Nader Marzouki</title>
+  <title>Darconex</title>
   <style>
-    /* Styles généraux */
     body {
       font-family: 'Roboto', sans-serif;
       color: #00ffc3;
@@ -41,8 +40,6 @@
     .container::before { top: -100%; left: 50%; }
     .container::after { bottom: -100%; right: 50%; }
     @keyframes rotate { from { transform: rotate(0); } to { transform: rotate(360deg); } }
-
-    /* Titre */
     h1, h2 {
       margin: 0;
       font-weight: bold;
@@ -50,8 +47,6 @@
       color: #00ffc3;
     }
     h1 { font-size: 2em; }
-
-    /* Grille */
     .grid {
       display: grid;
       gap: 20px;
@@ -63,8 +58,6 @@
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 255, 195, 0.2);
     }
-
-    /* Détails */
     .profile p, .experience p, .education p, .skills ul li {
       margin: 10px 0;
     }
@@ -75,7 +68,6 @@
     .skills ul li {
       font-size: 1.1em;
     }
-    /* Effets d'animation */
     .glow {
       text-shadow: 0 0 5px #00ffc3, 0 0 10px #00ffc3;
     }
@@ -85,23 +77,17 @@
       transition: color 0.3s;
     }
     .link:hover { color: #ff00a6; }
-
   </style>
 </head>
 <body>
-
 <div class="container">
-  <h1 class="glow">Nader Marzouki</h1>
+  <h1 class="glow">Cyrille</h1>
   <p class="glow">Développeur Futuriste</p>
-
   <div class="grid">
-    <!-- Profil Section -->
     <div class="profile">
       <h2>Profil</h2>
       <p>Passionné par les technologies avancées et les solutions d’avenir, je crée des expériences utilisateur immersives et intuitives, en repoussant les limites de l’innovation.</p>
     </div>
-
-    <!-- Expérience Section -->
     <div class="experience">
       <h2>Expérience</h2>
       <p><strong>2023-2024</strong> - Développeur Full Stack<br>
@@ -109,8 +95,6 @@
       <p><strong>2022-2023</strong> - Architecte Front-End<br>
         Société Tech Avancée</p>
     </div>
-
-    <!-- Éducation Section -->
     <div class="education">
       <h2>Éducation</h2>
       <p><strong>2020-2023</strong> - Master en Informatique<br>
@@ -118,8 +102,6 @@
       <p><strong>2017-2020</strong> - Licence en Développement<br>
         Institut de Technologie Moderne</p>
     </div>
-
-    <!-- Compétences Section -->
     <div class="skills">
       <h2>Compétences</h2>
       <ul>
