--- a/cv1.html
+++ b/cv1.html
@@ -82,7 +82,7 @@
 <body>
 <div class="container">
   <h1 class="glow">Cyrille</h1>
-  <p class="glow">Développeur Futuriste</p>
+  <p class="glow">Analyste SOC | Cybersécurité</p>
   <div class="grid">
     <div class="profile">
       <h2>Profil</h2>
