--- a/certificat.html
+++ b/certificat.html
@@ -137,11 +137,10 @@
         <header>
             <h1>Certificats</h1>
             <p>Découvrez l'ensemble des certifications obtenues et téléchargeables.</p>
-        </header>
-        
+        </header>        
         <section class="certificate-list">
             <div class="certificate-card">
-                <h2>Date de délivrance : Loi de Programmation militaire – </h2>
+                <h2>Loi de Programmation militaire – </h2>
                 <p>Formation SSI/LPM</p>
                 <p>Date d'émission : 07/2020</p>
                 <p>Statut : Actif</p>
