--- a/certificat.html
+++ b/certificat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Darconex - Certificats</title>
+    <title>Darconex</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/x-styles.css">
     <link rel="icon" href="img/logo.png" title="logo">
