--- a/certificat.html
+++ b/certificat.html
@@ -193,7 +193,7 @@
                 <p>Institution : SecNum</p>
                 <p>Date d'émission : 01/2022</p>
                 <p>Statut : Actif</p>
-                <a href="#" class="download-btn">Télécharger le certificat</a>
+                <a href="certificate/secnum.jpg" class="download-btn">Télécharger le certificat</a>
             </div>
         </section>
     </div>
