--- a/certificat.html
+++ b/certificat.html
@@ -140,11 +140,11 @@
         </header>        
         <section class="certificate-list">
             <div class="certificate-card">
-                <h2>Loi de Programmation militaire – </h2>
+                <h2>Loi de Programmation militaire</h2>
                 <p>Formation SSI/LPM</p>
                 <p>Date d'émission : 07/2020</p>
                 <p>Statut : Actif</p>
-                <a href="#" class="download-btn">Télécharger le certificat</a>
+                <a href="certificate/youaredigital.jpg" class="download-btn">Télécharger le certificat</a>
             </div>           
             <div class="certificate-card">
                 <h2>Vade for M365 Administration</h2>
