--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                         <li class="sub-item"><a href="https://darconex.github.io/cv.html" class="sub-link">CV</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="https://darconex.github.io/contact.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
     </header>
